# parsefy-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/parsefy/: __init__.py  client.py  errors.py  types.py  utils.py
tests/: __init__.py  test_client.py  test_utils.py
