[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsefy"
version = "1.0.0"
description = "Official Python SDK for Parsefy - AI-powered document data extraction"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Parsefy", email = "support@parsefy.io" }
]
keywords = ["parsefy", "ocr", "document", "extraction", "ai", "pdf", "docx", "pydantic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://parsefy.io"
Documentation = "https://docs.parsefy.io"
Repository = "https://github.com/parsefy/parsefy-py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parsefy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

